--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;900&display=swap" rel="stylesheet">
+
   <title>React Pizza</title>
 </head>
 
